# docmind-vlm

./: .dockerignore  .env.example  .gitignore  .releaserc.json  CLAUDE.md  Makefile  PROJECT.md  README.md  docker-compose.yml  kickoff-prompt.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0381657a47c7_add_project_persona_conversation_and_.py  1f8fcc3ba0a1_enable_pgvector_extension.py  46b462437e09_initial_schema.py  a2b3c4d5e6f7_add_raw_content_and_content_hash.py  a8b9c0d1e2f3_rescope_page_chunks_content_hash_unique.py  b3c4d5e6f7a8_add_templates_table.py  b9c0d1e2f3a4_cleanup_orphan_page_chunks.py  c4d5e6f7a8b9_add_api_tokens_table.py  d5e6f7a8b9c0_add_user_provider_configs_table.py  e6f7a8b9c0d1_add_chunk_embeddings_table.py  f7a8b9c0d1e2_cascade_chunk_embedding_document_fk.py
backend/src/docmind/: main.py  router.py
backend/src/docmind/core/: auth.py  config.py  dependencies.py  encryption.py  logging.py  middleware.py  rate_limit.py  scopes.py
backend/src/docmind/dbase/psql/: __init__.py
backend/src/docmind/dbase/sqlalchemy/: base.py  engine.py  models.py
backend/src/docmind/dbase/supabase/: client.py  storage.py
backend/src/docmind/modules/analytics/: dependencies.py  protocols.py  repositories.py  schemas.py  services.py  usecase.py
backend/src/docmind/modules/auth/: dependencies.py  protocols.py  schemas.py
backend/src/docmind/modules/chat/: dependencies.py  protocols.py  repositories.py  schemas.py  services.py  usecase.py
backend/src/docmind/modules/documents/: dependencies.py  protocols.py  repositories.py  schemas.py  services.py  usecase.py
backend/src/docmind/modules/extractions/: dependencies.py  protocols.py  repositories.py  schemas.py  services.py  usecase.py
backend/src/docmind/modules/health/: dependencies.py  protocols.py  schemas.py  services.py  usecase.py
backend/src/docmind/modules/notifications/: __init__.py
backend/src/docmind/modules/personas/: __init__.py  dependencies.py  protocols.py  repositories.py  schemas.py  seed.py  services.py  usecase.py
backend/src/docmind/modules/projects/: __init__.py  dependencies.py  protocols.py  repositories.py  schemas.py  services.py  usecase.py
backend/src/docmind/shared/: audit.py  exceptions.py  provider_resolver.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  conftest_real.py  test_auth_flow.py  test_document_flow.py  test_document_real.py  test_health_flow.py  test_project_flow.py  test_project_real.py  test_template_flow.py
backend/tests/integration/: conftest.py  test_alembic_migration.py  test_auth_api.py  test_chat_api.py  test_documents_api.py  test_extractions_api.py  test_health_api.py  test_process_api.py  test_rag_pipeline.py  test_templates_api.py
backend/tests/integration/core/: test_auth_integration.py
backend/tests/unit/: test_placeholder.py
backend/tests/unit/core/: test_auth.py  test_auth_unified.py  test_config.py  test_encryption.py  test_rate_limit.py  test_scopes.py
backend/tests/unit/shared/: test_audit_recorder.py  test_provider_resolver.py
(+359 files in other folders)
