[tool.poetry]
name = "docmind-vlm-backend"
version = "0.1.0"
description = "VLM-powered document intelligence backend"
packages = [{include = "docmind", from = "src"}]

[tool.poetry.scripts]
start = "docmind.main:main"
dev = "docmind.main:dev"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
pydantic = "^2.7"
pydantic-settings = "^2.4"
structlog = "^24.1"
supabase = "^2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.13"
langgraph = "^0.3"
langchain-core = "^0.3"
openai = "^1.40"
dashscope = "^1.20"
google-generativeai = "^0.8"
opencv-python-headless = "^4.10"
numpy = "^1.26"
pymupdf = "^1.24"
redis = "^5.0"
httpx = "^0.27"
pyjwt = {extras = ["crypto"], version = "^2.12.1"}

[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.4"
mypy = "^1.10"
isort = "^5.13"

[tool.poetry.group.test.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
pytest-mock = "^3.12"
httpx = "^0.27"
factory-boy = "^3.3"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.isort]
profile = "black"
known_first_party = ["docmind"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
