[tool.poetry]
name = "docmind-vlm-backend"
version = "0.1.0"
description = "VLM-powered document intelligence backend"
packages = [{include = "docmind", from = "src"}]

[tool.poetry.scripts]
start = "docmind.main:main"
dev = "docmind.main:dev"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135"
uvicorn = {extras = ["standard"], version = "^0.42"}
pydantic = "^2.12"
pydantic-settings = "^2.13"
structlog = "^25.5"
supabase = "^2.28"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.31"
alembic = "^1.18"
langgraph = "^1.1"
langchain-core = "^1.2"
openai = "^2.28"
dashscope = "^1.25"
google-generativeai = "^0.8"
opencv-python-headless = "^4.13"
numpy = "^2.2"
pymupdf = "^1.27"
redis = "^7.3"
httpx = "^0.28"
pyjwt = {extras = ["crypto"], version = "^2.12"}
python-multipart = "^0.0.22"

[tool.poetry.group.dev.dependencies]
black = "^26.3"
ruff = "^0.15"
mypy = "^1.19"
isort = "^6.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0"
pytest-asyncio = "^1.3"
pytest-cov = "^7.0"
pytest-mock = "^3.15"
httpx = "^0.28"
factory-boy = "^3.3"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.isort]
profile = "black"
known_first_party = ["docmind"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (require running database)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
